--- a/.github/workflows/formatter.yml
+++ b/.github/workflows/formatter.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Formatter-CI
 
 # Controls when the action will run.
 on:
@@ -10,7 +10,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  androidBuild:
+  Job:
     runs-on: ubuntu-latest
 
     steps:
